fixing overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,10 @@
   mask-composite: exclude;
 }
 
+* {
+  border: 1px solid #dbdbdb !important;
+}
+
 body {
   background-color: #000;
 }
